<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:columnCount="2"
        android:rowCount="3">
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:text="@string/app1"
            android:background="@color/orange_500"
            android:onClick="setToast"
            style="@style/button_text"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:text="@string/app2"
            android:background="@color/orange_300"
            android:onClick="setToast"
            style="@style/button_text"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:text="@string/app3"
            android:background="@color/orange_500"
            android:onClick="setToast"
            style="@style/button_text"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:text="@string/app4"
            android:background="@color/orange_300"
            android:onClick="setToast"
            style="@style/button_text"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:text="@string/app5"
            android:background="@color/orange_500"
            android:onClick="setToast"
            style="@style/button_text"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:text="@string/app6"
            android:background="@color/yellow_300"
            android:onClick="setToast"
            style="@style/button_text"/>
    </GridLayout>

</LinearLayout>
